Fix issues
Closes #3
Closes #118
Closes #125