@@ -3,6 +3,7 @@ package com.languagematters.tessta.report.google;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -1425,13 +1426,8 @@ public class DiffMatchPatch {
         for (Diff aDiff : diffs) {
             switch (aDiff.operation) {
                 case INSERT:
-                    try {
-                        text.append("+").append(URLEncoder.encode(aDiff.text, "UTF-8")
-                                .replace('+', ' ')).append("\t");
-                    } catch (UnsupportedEncodingException e) {
-                        // Not likely on modern system.
-                        throw new Error("This system does not support UTF-8.", e);
-                    }
+                    text.append("+").append(URLEncoder.encode(aDiff.text, StandardCharsets.UTF_8)
+                            .replace('+', ' ')).append("\t");
                     break;
                 case DELETE:
                     text.append("-").append(aDiff.text.length()).append("\t");
@@ -1477,10 +1473,7 @@ public class DiffMatchPatch {
                     // decode would change all "+" to " "
                     param = param.replace("+", "%2B");
                     try {
-                        param = URLDecoder.decode(param, "UTF-8");
-                    } catch (UnsupportedEncodingException e) {
-                        // Not likely on modern system.
-                        throw new Error("This system does not support UTF-8.", e);
+                        param = URLDecoder.decode(param, StandardCharsets.UTF_8);
                     } catch (IllegalArgumentException e) {
                         // Malformed URI sequence.
                         throw new IllegalArgumentException(
@@ -2276,10 +2269,7 @@ public class DiffMatchPatch {
                 line = text.getFirst().substring(1);
                 line = line.replace("+", "%2B");  // decode would change all "+" to " "
                 try {
-                    line = URLDecoder.decode(line, "UTF-8");
-                } catch (UnsupportedEncodingException e) {
-                    // Not likely on modern system.
-                    throw new Error("This system does not support UTF-8.", e);
+                    line = URLDecoder.decode(line, StandardCharsets.UTF_8);
                 } catch (IllegalArgumentException e) {
                     // Malformed URI sequence.
                     throw new IllegalArgumentException(
@@ -2457,13 +2447,8 @@ public class DiffMatchPatch {
                         text.append(' ');
                         break;
                 }
-                try {
-                    text.append(URLEncoder.encode(aDiff.text, "UTF-8").replace('+', ' '))
-                            .append("\n");
-                } catch (UnsupportedEncodingException e) {
-                    // Not likely on modern system.
-                    throw new Error("This system does not support UTF-8.", e);
-                }
+                text.append(URLEncoder.encode(aDiff.text, StandardCharsets.UTF_8).replace('+', ' '))
+                        .append("\n");
             }
             return unescapeForEncodeUriCompatability(text.toString());
         }
